argocd/infra/monitoring/vm-k8s-stack/manifests/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: monitoring-app
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: VictoriaMetrics
    gethomepage.dev/icon: victoriametrics
    gethomepage.dev/description: "VictoriaMetrics is a fast, cost-effective monitoring\
      \ solution and time series database."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
  name: vm-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - vm.yanello.net
  rules:
    - backendRefs:
        - name: vmsingle-victoria-metrics-k8s-stack
          namespace: monitoring
          port: 8429
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: monitoring-app
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/name: VictoriaMetrics
  #   gethomepage.dev/icon: victoriametrics
  #   gethomepage.dev/description: "VictoriaMetrics is a fast, cost-effective monitoring solution and time series database."
  #   gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
  name: vmagent-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - vmagent.yanello.net
  rules:
    - backendRefs:
        - name: vmagent-victoria-metrics-k8s-stack
          namespace: monitoring
          port: 8429
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana
    gethomepage.dev/description: "Grafana is a multi-platform open source analytics\
      \ and interactive visualization web application."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=grafana
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - grafana.yanello.net
  rules:
    - backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          namespace: monitoring
          port: 80
--- null
...
